--- a/14-26.April/content/diskussion.tex
+++ b/14-26.April/content/diskussion.tex
@@ -1,2 +1,8 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Generell ist die Bestimmung eines Scharfen Bildes recht Objektiv gewesen. Es konnte nicht immer ein eindeutiger Punkt gefunden werden, sondern eher ein ganzer Bereich. Daher wurde Versucht die Schärfe an bestimmten Merkmalen an der Gestalt des Bildes reproduzierbar zu machen. 
+Die Linsengleichung scheint als bestätigt da die Werte eine Abweichung von 0 bis 6 \% von den theoretischen abweichen und dies im Rahmen der Messunsicherheit dieses Versuches aufgrund des oben gennante Problems liegt.
+Die Bekannte Linse wurde mit einer Messfehler von 2 \% bestimmt, was als gelungene Messung eingestuft werden kann. 
+Bei der Unbekannten Linse beträgt der Fehler 26 \%. Dabei Trifft auf das wenn der Brennpunkt im Plott auf die y-Achse projeziert werden würde dies einer Brennweite von 15 cm entsprechen würde. Da aber der Fehler bei dem Brennpunkt welcher auf  die x-Achse jedoch gorß ist, kommt solch ein großer Fehler zu stande. Diesliegt womöglich daran, dass ein Bild welches rein Objektiv als scharf empfunden wurde, dies nicht wirklich war.
+Die Mittels der Besselmethode bestimmte Brennweite für weißes Licht beträgt 9.7 cm. Dies entspricht einer relativen Abweichung von 3 \%. Desweiteren wurde ermittelt das die Brechkraft der Linse bei rotem licht geringer als die vom blauen ist.
+
