--- a/14-26.April/content/theorie.tex
+++ b/14-26.April/content/theorie.tex
@@ -46,6 +46,7 @@ und $d$ entspricht
 Durch einsetzen läßt sich die Brennweite der Linse zu
 \begin{equation}
 	f = \frac{e^2 - d^2}{4e}
+	\label{eqn:tbes}
 \end{equation}
 bestimmen.
 
@@ -53,10 +54,12 @@ bestimmen.
 Dafür muss neben der Brennweite $f$, auch die Lage der beiden Hauptebenen $H$ und $H'$ ermittelt werden. Dies geschieht über das Abbildungsgesetz (siehe Gl. (\ref{eqn:V})). Wie in Abbildung (\ref{fig:Abbe}) zu erkennen ist, werden dazu die Bild- und Gegenstandsweiten $g'$ und $b'$ bezüglich eines beliebigen Punktes $A$ gemessen. Aus den Formeln
 \begin{equation}
 	g' = g + h = f \cdot \left( 1 + \frac{1}{V} \right) + h
+	\label{eqn:g'}
 \end{equation}
 und
 \begin{equation}
 	b' = b + h' = f \cdot (1 + V) + h'
+	\label{eqn:b'}
 \end{equation}
 ergeben sich dann die Brennweite $f$ und die Lage der Hauptebenen.
 
