--- a/14-26.April/content/theorie.tex
+++ b/14-26.April/content/theorie.tex
@@ -7,14 +7,13 @@ Im Allgemeinen werden Linsen aus einem Material gefertigt, welches einen anderen
 \end{minipage}
 \begin{minipage}[T]{0.5\textwidth}
 \includegraphics[width=1\textwidth]{picture/Bild1.PNG}
+\captionof{figure}{Bildkonstruktion für drei ausgewählte Linsen. \cite[1]{sample}}
 \label{fig:Bild1}
 \end{minipage}
 Der Parrallelstrahl $P$ läuft vom Gegenstand $G$ parrallel zur optischen Achse zur Linse und wird dort so gebrochen, dass er durch den Bildpunkt $B$ läuft. \\
 Der Mittelpunktsstrahl läuft vom Gegenstand $G$ direkt zum Bildpunkt $B$ ohne durch die Linse gebrochen zu werden.\\
-Der Brennpunktstrahl läuft vom Gegenstand $G$ zur Linse und wird dort so gebrochen, dass er danach parrallel zur optischen Achse läuft und die beiden anderen Strahlen im Bildpunkt $B$ schneidet.
-\newpage
-
-Mithilfe der Strahlensätze lässt sich das Abbildungsgesetz, an den Fällen in \\ Abbildung (\ref{fig:Bild1}), herleiten:
+Der Brennpunktstrahl läuft vom Gegenstand $G$ zur Linse und wird dort so gebrochen, dass er danach parrallel zur optischen Achse läuft und die beiden anderen Strahlen im Bildpunkt $B$ schneidet.\\
+Mithilfe der Strahlensätze lässt sich das Abbildungsgesetz, an den Fällen in Abbildung (\ref{fig:Bild1}), herleiten:
 \begin{equation}
 	V = \frac{B}{G} = \frac{b}{g} \ .
 	\label{eqn:V}
