--- a/14-26.April/content/theorie.tex
+++ b/14-26.April/content/theorie.tex
@@ -7,7 +7,7 @@ Im Allgemeinen werden Linsen aus einem Material gefertigt, welches einen anderen
 \end{minipage}
 \begin{minipage}[T]{0.5\textwidth}
 \includegraphics[width=1\textwidth]{picture/Bild1.PNG}
-\captionof{figure}{Bildkonstruktion für drei ausgewählte Linsen. \cite[1]{sample}}
+\captionof{figure}{Bildkonstruktion für drei ausgewählte Linsen. \cite{sample}}
 \label{fig:Bild1}
 \end{minipage}
 Der Parrallelstrahl $P$ läuft vom Gegenstand $G$ parrallel zur optischen Achse zur Linse und wird dort so gebrochen, dass er durch den Bildpunkt $B$ läuft. \\
@@ -31,7 +31,7 @@ Dafür wird der Abstand $e$ und der Abstand $d$ konstant gehalten (siehe Abbildu
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=5cm]{picture/Bessel}
-	\caption{Schematische Darstellung für die Methode von Bessel.}
+	\caption{Schematische Darstellung für die Methode von Bessel. \cite{sample}}
 	\label{fig:Bessel}
 \end{figure}
 Der Abstand $e$ ist gleich
@@ -65,6 +65,6 @@ ergeben sich dann die Brennweite $f$ und die Lage der Hauptebenen.
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=5cm]{picture/Abbe}
-	\caption{Schematische Darstellung für die Methode von Abbe.}
+	\caption{Schematische Darstellung für die Methode von Abbe. \cite{sample}}
 	\label{fig:Abbe}
 \end{figure}
