--- a/14-26.April/content/auswertung.tex
+++ b/14-26.April/content/auswertung.tex
@@ -25,7 +25,7 @@ Um die Gleichung \ref{eqn:V} und \ref{eqn:D} zu verifizieren sind die dafür Rel
   \label{tab:VdA}
 \end{table}
 \subsection{Bestimmung einer Bekannten sowie Unbekannten Brennweite}
-Desweiteren wird zur ermittlung der Brennweite ein Plot erstellt, wobei die Gegenstandsweiten auf die Y-Achse des Koordinatensystems aufgetragen werden und mit den entsprechenden Bildweiten, welche auf der X-Achse aufgetragen sind, verbunden. Aus dem Schnittpunkt der Graden lässt sich die Brennweite der Linse Ablesen. Aus Abbildung \ref{fig:fibek} wird die Brennweite
+Desweiteren wird zur Ermittlung der Brennweite ein Plot erstellt, wobei die Gegenstandsweiten auf die Y-Achse des Koordinatensystems aufgetragen werden und mit den entsprechenden Bildweiten, welche auf der X-Achse aufgetragen sind, verbunden. Aus dem Schnittpunkt der Graden lässt sich die Brennweite der Linse Ablesen. Aus Abbildung \ref{fig:fibek} wird die Brennweite
 \begin{equation}
   f_\text{abgelesen} = (\num{9.8 +- 0.7}) 10^{-2} \, \text{m}
   \label{eqn:fbek}
@@ -55,7 +55,7 @@ ablesen.
 \end{figure}
 
 \subsection{Besselmethode}
-Die entsprechenden Messdaten zu dem Versuch sind in Tabelle \ref{tab:ffw} zu finden.  Dabei wurde die Brennweite nach Formel \ref{eqn:tbes} berechnet, wobei der Abstand $d = g - b$ und die Gegenstandsweite als $g = e - b$ dem enstsprechend definiert ist.
+Die entsprechenden Messdaten zu dem Versuch sind in Tabelle \ref{tab:ffw} zu finden.  Dabei wirde die Brennweite nach Formel \ref{eqn:tbes} berechnet, wobei der Abstand $d = g - b$ und die Gegenstandsweite als $g = e - b$ dem enstsprechend definiert ist.
 \begin{table}
   \centering
   \begin{tabular}{c c c | c c}
@@ -119,7 +119,7 @@ und für blaues Licht eine Brennweite von
 \end{equation}
 
 \subsection{Methode nach Abbe}
-Es sollen die Hauptebene und die Brennweite mithilfe der Formeln \ref{eqn:g'} und \ref{eqn:b'} bestimmt werden. Dafür wird zunächst eine lineare Regression durchgeführt und die Fitparameter sich ausgegeben gelassen. 
+Es sollen die Hauptebene und die Brennweite mit hilfe der Formeln \ref{eqn:g'} und \ref{eqn:b'} bestimmt werden. Dafür wird zunächst eine lineare Regression durchgeführt und die Fitparameter sich ausgegeben gelassen. 
 \begin{figure}
   \centering
     \includegraphics[height=5cm]{Abbe1.pdf}
@@ -134,9 +134,9 @@ Es sollen die Hauptebene und die Brennweite mithilfe der Formeln \ref{eqn:g'} un
 \end{figure}
 Der Fit ergibt die Brennweiten und die Laage der Hauptebenen
 \begin{eqnarray}
-  f_\text{g} &= (\num{ 6.2+- 0.1}) \cdot 10^{-2} \text{m} \\ 
-  f_\text{b} &= (\num{ 5.72 +- 0.04 }) \cdot 10^{-2} \text{m} \\
-  h &= (\num{ -0.72 +- 0.09}) \text{m} \\
-  h' &= (\num{ 0.305 +- 0.008}) \text{m} 
+  f_\text{g} &= (\num{ 15.9 +- 0.3}) \cdot 10^{-2} \, \text{m} \\ 
+  f_\text{b} &= (\num{ 17.5 +- 0.1 }) \cdot 10^{-2} \, \text{m} \\
+  h &= (\num{ 11 +- 1}) \cdot 10^{-2} \, \text{m} \\
+  h' &= (\num{ -5.3 +- 0.18}) \cdot 10^{-2} \,\text{m} 
   \label{eqn:abbedf}
 \end{eqnarray}
