--- a/14-26.April/content/auswertung.tex
+++ b/14-26.April/content/auswertung.tex
@@ -13,7 +13,7 @@ Um die Gleichung \ref{eqn:V} und \ref{eqn:D} zu verifizieren sind die dafür Rel
     23	& 16.8	& 2.2	& 0.73 & 0.73	& 0.0	\\
     22	& 17.6	& 2.3	& 0.80 & 0.77	& 3.8	\\
     21	& 18.4	& 2.7	& 0.88 & 0.90	& 2.3	\\
-    20	& 19.3	& 2.8	& 0.97 & 0.93	& 4.1	\\
+    20	& 19.3	& 2.7	& 0.97 & 0.90	& 7.2	\\
     19	& 20.5	& 3.1	& 1.08 & 1.03	& 4.7	\\
     18	& 21.4	& 3.4	& 1.18 & 1.13	& 4.2	\\
     17	& 23.1	& 4.2	& 1.35 & 1.40	& 3.7	\\
@@ -119,7 +119,30 @@ und für blaues Licht eine Brennweite von
 \end{equation}
 
 \subsection{Methode nach Abbe}
-Es sollen die Hauptebene und die Brennweite mit hilfe der Formeln \ref{eqn:g'} und \ref{eqn:b'} bestimmt werden. Dafür wird zunächst eine lineare Regression durchgeführt und die Fitparameter sich ausgegeben gelassen. 
+Es sollen die Hauptebene und die Brennweite mit hilfe der Formeln \ref{eqn:g'} und \ref{eqn:b'} bestimmt werden. Es wird eine Zerstreuungslinse und Fokussierlinse jeweils von 10 cm Brennweite im Abstand von 6 cm verwendet. Die restlichen Messwerte sind in Tabelle \ref{tab:mabbe} aufgetragen. 
+\begin{table}
+  \centering
+  \begin{tabular}{c c c}
+    \toprule
+    	$g$ / cm & $b$ / cm & $V$ \\
+    \midrule	
+	104.4	& 15.6	& 4.94	\\
+	99.0	& 16.0	& 4.50	\\
+	93.7	& 16.3	& 4.17	\\
+	88.3	& 16.7	& 3.83	\\
+	82.7	& 17.3	& 3.40	\\
+	77.0	& 18.0	& 3.03	\\
+	71.5	& 18.5	& 2.77	\\
+	65.5	& 19.5	& 2.37	\\
+	59.4	& 20.6	& 2.07	\\
+	52.0	& 23.0	& 1.60	\\
+    \bottomrule
+  \end{tabular}
+  \caption{Messwerte zur Bestimmung der Brennweite mittels Abbemethode}
+  \label{tab:mabbe}
+\end{table}
+
+Es wird zunächst eine lineare Regression durchgeführt und die Fitparameter ermittelt. Anhand derer kann man aus der Steigung des Graphens und den Schnittpunkten mit der Achse die Hauptebenen und die Brennweiten berechnen.
 \begin{figure}
   \centering
     \includegraphics[height=5cm]{Abbe1.pdf}
@@ -140,3 +163,10 @@ Der Fit ergibt die Brennweiten und die Laage der Hauptebenen
   h' &= (\num{ -5.3 +- 0.18}) \cdot 10^{-2} \,\text{m} 
   \label{eqn:abbedf}
 \end{eqnarray}
+Die Theoretische Brennweite des Systems berechnet sich aus modifikation der Formel \ref{eqn:D} um einen Korrekturfaktor zu 
+\begin{eqnarray}
+  \frac{1}{f} &= \frac{1}{f_1} + \frac{1}{f_2} - \frac{d}{f_1 * f_2} \\
+  f &= 16.6 \cdot 10^{-2} \, m \ .
+  \label{tabbe}
+\end{eqnarray}
+
