--- a/15-03.Mai/lit.bib
+++ b/15-03.Mai/lit.bib
@@ -1,6 +1,6 @@
-@manual{sample,
+@manual{pra,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014,
-  address = {Link einfügen},
+  title = {Versuch 504, Thermische Elektronenmission},
+  year = 2016,
+  address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V504.pdf},
 }
