--- a/15-03.Mai/content/durchfuehrung.tex
+++ b/15-03.Mai/content/durchfuehrung.tex
@@ -2,7 +2,7 @@
 \label{sec:Durchführung}
 Zunächst werde eine Kennlinienschar erstellt indem in geeigneten Intervallen dem Aufbau die Beschlunigungsoannung $U_B$ sowie die der Saugstrom $I_\text{S}$ entnommen wird. Dies wird für 5 verschiedene Heizströme wiederholt. Bei der Berechnung der Spannungen und Ströme sind die einzelnen Wiederstände die die einzelnen Bauteile besitzen zu beachten. Desweiteren soll der Heizstrom wie auch Spannung notiert werden.
 
-Zur Messung des Anlaufstromkurve ist Aufbau ist wie in Abbildung \ref{eqn:Anl} zu tätigen. 
+Zur Messung des Anlaufstromkurve ist Aufbau ist wie in Abbildung \ref{fig:Anl} zu tätigen. 
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/Gegenfeld.png}
