--- a/13-19.April/content/auswertung.tex
+++ b/13-19.April/content/auswertung.tex
@@ -1,7 +1,7 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
-Der zu Beginn ausgemessene Abstand $L$ von dem Spalt zu der Messdiode und die Wellenlänge des verwendeten Lasers lauten:
+Der zu Beginn ausgemessene Abstand $L$ von dem Spalt zu der Photodiode und die Wellenlänge des verwendeten Lasers sind:
 \begin{align*}
   L &= 0.93 \ \text{m} \\
   \lambda &= 633 \cdot 10^{-9} \ \text{m}
@@ -79,6 +79,7 @@ und wird für alle Messungen als konstant angesehen. Mithilfe der Gleichungen (\
   \label{tab:Spalt}
 \end{table}
 
+\subsection{Ausgleichsrechnung zum dünnen Einzelspalt}
 \begin{figure}[H] %Einzelspalt dünn
   \centering
   \includegraphics[height=9cm]{build/plot1.pdf}
@@ -86,6 +87,33 @@ und wird für alle Messungen als konstant angesehen. Mithilfe der Gleichungen (\
   \label{fig:Einzel1}
 \end{figure}
 
+Die Herstellerangabe für die Spaltbreite $b$ von dem dünnen Einzelspalt ist:
+\begin{align*}
+  b_\text{Her} = 7.5 \cdot 10^{-5} \ \text{m}
+\end{align*}
+Die errechnete Spaltbreite $b$ für den dünnen Einzelspalt ist:
+\begin{align*}
+  b_\text{Beugung} = (\num{5.19 +- 0.05}) \cdot 10^{-5} \ \text{m}
+\end{align*}
+und die Normierungskonstante $A$:
+\begin{align*}
+  A = (\num{6.29 +- 0.05}) \ .
+\end{align*}
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
+\begin{align*}
+  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = 44.50 \ \%
+\end{align*}
+Die gemessene Spaltbreite $b$ mit Hilfe eines Mikroskops beträgt:
+\begin{align*}
+  b_\text{Mikroskop} = 7.22 \cdot 10^{-5} \ \text{m}
+\end{align*}
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ beträgt:
+\begin{align*}
+  \frac{b_\text{Her}-b_\text{Mikroskop}}{b_\text{Mikroskop}} \cdot 100 = 3.88 \ \%
+\end{align*}
+
+
+\subsection{Ausgleichsrechnung zum mittleren Einzelspalt}
 \begin{figure}[H] %Einzelspalt mittel
   \centering
   \includegraphics[height=9cm]{build/plot2.pdf}
@@ -93,6 +121,33 @@ und wird für alle Messungen als konstant angesehen. Mithilfe der Gleichungen (\
   \label{fig:Einzel2}
 \end{figure}
 
+Die Herstellerangabe für die Spaltbreite $b$ von dem mittleren Einzelspalt ist:
+\begin{align*}
+  b_\text{Her} = 15.0 \cdot 10^{-5} \ \text{m}
+\end{align*}
+Die errechnete Spaltbreite $b$ für den mittleren Einzelspalt ist:
+\begin{align*}
+  b_\text{Beugung} = (\num{11.57 +- 0.65}) \cdot 10^{-5} \ \text{m}
+\end{align*}
+und die Normierungskonstante $A$:
+\begin{align*}
+  A = (\num{8.69 +- 0.39}) \ .
+\end{align*}
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
+\begin{align*}
+  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = 30.34 \ \%
+\end{align*}
+Die gemessene Spaltbreite $b$ mit Hilfe eines Mikroskops beträgt:
+\begin{align*}
+  b_\text{Mikroskop} = 13.3 \cdot 10^{-5} \ \text{m}
+\end{align*}
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ beträgt:
+\begin{align*}
+  \frac{b_\text{Her}-b_\text{Mikroskop}}{b_\text{Mikroskop}} \cdot 100 = 12.78 \ \%
+\end{align*}
+
+
+\subsection{Ausgleichsrechnung zum dicken Einzelspalt}
 \begin{figure}[H] %Einzelspalt dick
   \centering
   \includegraphics[height=9cm]{build/plot1.pdf}
@@ -100,6 +155,33 @@ und wird für alle Messungen als konstant angesehen. Mithilfe der Gleichungen (\
   \label{fig:Einzel3}
 \end{figure}
 
+Die Herstellerangabe für die Spaltbreite $b$ von dem dicken Einzelspalt ist:
+\begin{align*}
+  b_\text{Her} = 40.0 \cdot 10^{-5} \ \text{m}
+\end{align*}
+Die errechnete Spaltbreite $b$ für den dicken Einzelspalt ist:
+\begin{align*}
+  b_\text{Beugung} = (\num{24.47 +- 1.03}) \cdot 10^{-5} \ \text{m}
+\end{align*}
+und die Normierungskonstante $A$:
+\begin{align*}
+  A = (\num{13.85 +- 0.34}) \ .
+\end{align*}
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
+\begin{align*}
+  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = 63.47 \ \%
+\end{align*}
+Die gemessene Spaltbreite $b$ mit Hilfe eines Mikroskops beträgt:
+\begin{align*}
+  b_\text{Mikroskop} = 40.0 \cdot 10^{-5} \ \text{m}
+\end{align*}
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ beträgt:
+\begin{align*}
+  \frac{b_\text{Her}-b_\text{Mikroskop}}{b_\text{Mikroskop}} \cdot 100 = 0.00 \ \%
+\end{align*}
+
+
+\subsection{Ausgleichsrechnung zum Doppelspalt}
 \begin{figure}[H] %Doppelspalt
   \centering
   \includegraphics[height=9cm]{build/plot4.pdf}
@@ -107,39 +189,24 @@ und wird für alle Messungen als konstant angesehen. Mithilfe der Gleichungen (\
   \label{fig:Doppel}
 \end{figure}
 
-Es ergeben sich folgende Werte für den dünnen Einzelspalt:
+Die Herstellerangabe für die Spaltbreite $b$ und den Spaltabstand $s$ vom Doppelspalt sind:
 \begin{align*}
-  \text{Spaltbreite per Intensitätsverteilung}:& \ b_\text{Beugung} = (\num{0.9999 +- 0.0}) \ \text{m} \\
-  \text{Spaltbreite per Mikroskop}:& \ b_\text{Mikroskop} = 7.22 \cdot 10^{-5} \ \text{m} \\
-  \text{Herstellerangabe}:& \ b_\text{Her} = 7.5 \cdot 10^{-5} \ \text{m} \\
-  \text{Abweichung}:& \ \frac{b_\text{Her} \cdot 100}{b_\text{Beugung}} - 100 = 99.99 \% \\
-  \text{Abweichung}:& \ \frac{b_\text{Mikroskop} \cdot 100}{b_\text{Beugung}} - 100 = 3.88 \%
+  b_\text{Her} = 10.0 \cdot 10^{-5} \ \text{m} \\
+  s_\text{Her} = 40.0 \cdot 10^{-5} \ \text{m} \ .
 \end{align*}
-
-Es ergeben sich folgende Werte für den mittleren Einzelspalt:
+Die errechnete Spaltbreite $b$ für den Doppelspalt ist:
 \begin{align*}
-  \text{Spaltbreite per Intensitätsverteilung}:& \ b_\text{Beugung} = (\num{1.0003 +- 0.0}) \ \text{m} \\
-  \text{Spaltbreite per Mikroskop}:& \ b_\text{Mikroskop} = 1.33 \cdot 10^{-5} \ \text{m} \\
-  \text{Herstellerangabe}:& \ b_\text{Her} = 1.5 \cdot 10^{-5} \ \text{m} \\
-  \text{Abweichung}:& \ \frac{b_\text{Her} \cdot 100}{b_\text{Beugung}} - 100 = 99.99 \% \\
-  \text{Abweichung}:& \ \frac{b_\text{Mikroskop} \cdot 100}{b_\text{Beugung}} - 100 = 12.78 \%
+  b_\text{Beugung} = (\num{29.5201 +- 0.0031}) \cdot 10^{-5} \ \text{m}
 \end{align*}
-
-Es ergeben sich folgende Werte für den dicken Einzelspalt:
+und der Spaltabstand $s$:
 \begin{align*}
-  \text{Spaltbreite per Intensitätsverteilung}:& \ b_\text{Beugung} = (\num{0.9997 +- 0.0}) \ \text{m} \\
-  \text{Spaltbreite per Mikroskop}:& \ b_\text{Mikroskop} = 4.0 \cdot 10^{-5} \ \text{m} \\
-  \text{Herstellerangabe}:& \ b_\text{Her} = 4.0 \cdot 10^{-5} \ \text{m} \\
-  \text{Abweichung}:& \ \frac{b_\text{Her} \cdot 100}{b_\text{Beugung}} - 100 = 99.96 \% \\
-  \text{Abweichung}:& \ \frac{b_\text{Mikroskop} \cdot 100}{b_\text{Beugung}} - 100 = 0.00 \%
+  s_\text{Beugung} = (\num{29.5184 +- 0.0025}) \cdot 10^{-5} \ .
 \end{align*}
-
-Es ergeben sich folgende Werte für den Doppelspalt:
+Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
 \begin{align*}
-  \text{Spaltbreite}:& \ b_\text{Beugung} = (\num{1.0018 +- 0.0}) \ \text{m} \\
-  \text{Spaltabstand}:& \ s_\text{Beugung} = (\num{0.9968 +- 0.0}) \ \text{m} \\
-  \text{Herstellerangabe}:& \ b_\text{Her} = 1.0 \cdot 10^{-5} \ \text{m} \\
-  \text{Herstellerangabe}:& \ s_\text{Her} = 4.0 \cdot 10^{-5} \ \text{m} \\
-  \text{Abweichung}:& \ \frac{b_\text{Her} \cdot 100}{b_\text{Beugung}} - 100 = 99.99 \% \\
-    \text{Abweichung}:& \ \frac{s_\text{Her} \cdot 100}{s_\text{Beugung}} - 100 = 99.96 \% \\
+  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = -66.12 \ \%
+\end{align*}
+und für die Abweichung zwischen $s_\text{Her}$ und $s_\text{Beugung}$ folgt:
+\begin{align*}
+  \frac{s_\text{Her}-s_\text{Beugung}}{s_\text{Beugung}} \cdot 100 = 35.51 \ \%
 \end{align*}
