--- a/13-19.April/content/diskussion.tex
+++ b/13-19.April/content/diskussion.tex
@@ -1,3 +1,11 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Wie bereits an den Graphen aus Abbildung (\ref{fig:Einezl1}) bis (\ref{fig:Doppel}) zu erkennen ist, wird die Funktion nicht richtig gefittet. Dadurch kommt es auch zu den starken Abweichungen von den Herstellerangaben. Die starken Abweichungen sind allerdings nicht durch Messfehler zu begründen.
+Die errechneten Werte liegen zwischen 30 \% und 70 \% von den Herstellerangaben entfernt. Diese Abweichungen können viele Gründe haben, zum Beispiel:
+\begin{itemize}
+\item das der Abstand zwischen der Lichtquelle und dem Schirm bzw. dem Spalt und dem Schirm nicht groß genug gewählt war.
+\item das der Laser zu schwach war wodurch die Nebenmaxima ebenfalls sehr klein geworden sind.
+\item das Wechseln der Messskala des Ampermeters hat Schwankungen hervorgerufen.
+\item Außerdem wurde das Licht in dem Raum immer wieder an und aus gemacht wodurch Schwankungen in der Intensität aufgetreten sind.
+\end{itemize}
+Aus diesen Gründen ist auch die Messung mit dem Mikroskop deutlich genauer.
+Die Abweichung für die Messung mit dem Mikroskop liegen zwischen 0 \% und 15 \%.
