--- a/13-19.April/content/theorie.tex
+++ b/13-19.April/content/theorie.tex
@@ -1,13 +1,13 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Zur Beugung von Licht kommt es, wenn die Abmessung des Hindernisses in der Größenordung der Wellenlänge $\lambda$, des Lichts, liegt. Dabei kommt es zur Abweichung des Lichtes von der Geometrischen Optik. Für den Versuch wird angenommen, dass der Schirm sehr weit von der Blende entfernt ist, so dass die Fraunhofer-Näherung genutzt werden kann. In Abbildung \ref{fig:Fra} ist zu sehen, dass das Licht jeweils um den Winkel $\phi$ gebeugt wird.
+Zur Beugung von Licht kommt es, wenn die Abmessung des Hindernisses in der Größenordung der Wellenlänge $\lambda$ des Lichts liegt. Dabei kommt es zur Abweichung des Lichtes von der Geometrischen Optik. Bei der Fresnel-Näherung ist die Lichtquelle und der Beobachtungspunkt nah zusammen, wodurch die Lichtstrahlen nicht um den gleichen Winkel gebrochen werden. Für den Versuch wird angenommen, dass der Schirm sehr weit von der Blende entfernt ist, so dass die Fraunhofer-Näherung genutzt werden kann. In Abbildung \ref{fig:Fra} ist zu sehen, dass das Licht jeweils um den Winkel $\phi$ gebeugt wird.
 \begin{figure}
   \centering
   \includegraphics[height=6cm]{picture/Frauenhofer.png}
   \caption{Fraunhofer Beugung. \cite[1]{sample}}
   \label{fig:Fra}
 \end{figure}
-Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität die Interferenz beschreiben. Es besagt einerseits, dass jeder Punkt einer Wellenfront Ausgangspunkt einer neuen Kugelwelle ist und andererseits, dass die Einhüllende der Elementarwellen die neue Wellenfront ergibt. Um eine Aussage in einenm Punkt zu machen, müssen aufgrund des Huygensschen Prinzip alle Wellen die in diesem Punkt ankommen überlagert werden. Der einfacherheit halber wird zunächst ein Einzelspalt betrachtet und anschließend auf andere Querschnitte geschlossen. Beim Einzelspalt müssen dafür die einzelnen Amplituden eines Strahlenbündels unter dem entsprechenden Ablenkungswinkel $\phi$ summiert werden.
+Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität die Interferenz beschreiben. Es besagt einerseits, dass jeder Punkt einer Wellenfront Ausgangspunkt einer neuen Kugelwelle ist und andererseits, dass die Einhüllende der Elementarwellen die neue Wellenfront ergibt. Um eine Aussage in einem Punkt zu machen, müssen nach dem Huygensschen Prinzip alle Wellen die in diesem Punkt ankommen überlagert werden. Der einfachheit halber wird zunächst ein Einzelspalt betrachtet und anschließend auf andere Spalte geschlossen. Interferenz bedeutet beim Einzelspalt, dass die einzelnen Amplituden der Elementarwellen, die gleichzeitig in einem Punkt sind, überlagert werden.
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/doppelspalt.png}
@@ -41,37 +41,4 @@ Die Intensitätsverteilung $I(\phi)$ des Doppelspalts beruht darauf, das im Abst
 \end{equation}
 
 \subsection{Fehlerrechnung}
-Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
-\subsubsection{Mittelwert}
-Der Mittelwert einer Messreihe $x_\text{1}, ... ,x_\text{n}$ lässt sich durch die Formel
-\begin{equation}
-	\overline{x} = \frac{1}{N} \sum_{\text{k}=1}^\text{N} x_k
-	\label{eqn:ave}
-\end{equation}
-berechnen. Die Standardabweichung des Mittelwertes beträgt
-\begin{equation}
-	\Delta \overline{x} = \sqrt{ \frac{1}{N(N-1)} \sum_{\text{k}=1}^\text{N} (x_\text{k} - \overline{x})^2}
-	\label{eqn:std}
-\end{equation}
-
-\subsubsection{Gauß'sche Fehlerfortpflanzung}
-Wenn $x_\text{1}, ..., x_\text{n}$ fehlerbehaftete Messgrößen im weiteren Verlauf benutzt werden, wird der neue Fehler $\Delta f$ mit Hilfe der Gaußschen Fehlerfortpflanzung angegeben.
-\begin{equation}
-	\Delta f = \sqrt{\sum_{\text{k}=1}^\text{N} \left( \frac{ \partial f}{\partial x_\text{k}} \right) ^2 \cdot (\Delta x_\text{k})^2}
-	\label{eqn:var}
-\end{equation}
-
-\subsubsection{Lineare Regression}
-Die Steigung und y-Achsenabschnitt einer Ausgleichsgeraden werden gegebenfalls mittels Linearen Regression berechnet.
-\begin{equation}
-	y = m \cdot x + b
-	\label{eqn:reg}
-\end{equation}
-\begin{equation}
-	m = \frac{ \overline{xy} - \overline{x} \overline{y} } {\overline{x^2} - \overline{x}^2}
-	\label{eqn:reg_m}
-\end{equation}
-\begin{equation}
-	b = \frac{ \overline{x^2}\overline{y} - \overline{x} \, \overline{xy}} { \overline{x^2} - \overline{x}^2}
-	\label{eqn:reg_b}
-\end{equation}
+Sämtliche Fehler und Fits werden im folgenden mit der Funktion "Lmfit" aus Python ausgeführt.
