--- a/15-03.Mai/content/durchfuehrung.tex
+++ b/15-03.Mai/content/durchfuehrung.tex
@@ -9,4 +9,5 @@ Zur Messung des Anlaufstromkurve ist der Aufbau wie in Abbildung \ref{fig:Anl} z
   \caption{Anlaufsstromschaltung \cite{pra}}
   \label{fig:Anl}
 \end{figure}
-Dabei wird in 20 äquidistanten Schritten zwischen, 0 und 1 Volt ein Gegenfeld aufgebaut. Der Heizstrom ist zu Maximieren und die Ströme im nA Bereich vom Messgerät abzulesen. Dabei ist der Widerstand des Bananensteckers durch mehrfaches drehen zu minimieren. 
+Dabei wird in 20 äquidistanten Schritten zwischen, 0 und 1 Volt ein Gegenfeld aufgebaut. Der Heizstrom ist zu Maximieren und die Ströme im nA Bereich vom Messgerät abzulesen. Dabei ist der Widerstand des Bananensteckers durch mehrfaches drehen zu minimieren.
+\newpage
