--- a/15-03.Mai/content/auswertung.tex
+++ b/15-03.Mai/content/auswertung.tex
@@ -1,69 +1,217 @@
 \section{Auswertung}
 \label{sec:Auswertung}
+Die zu Beginn aufgenommenen Daten zu den zwei Hochvakuumdioden werden im folgenden aufgelistet:\\
+\textbf{Diode 1:} \\
+  Kathodenoberfläche: f = 0.32 cm$^{2}$ , \\
+  Maximaler Heizstrom: I = 2.5 A \\
+\textbf{Diode 2:} \\
+  Kathodenoberfläche: f = 0.35 cm$^{2}$ , \\
+  Maximaler Heizstrom: I = 2.0 A \\
 
-\begin{table}[H]
-  \small
+  \begin{table} %Messdaten
+    \small
+    \centering
+    \begin{tabular}{c||c|c|c|c|c}
+      \toprule
+      Beschleunigungs- & \multicolumn{2}{c|}{Diode 1} & \multicolumn{3}{c}{Diode 2} \\
+      spannung & $I_\text{heiz}$ = 2.5 A & $I_\text{heiz}$ = 2.4 A & $I_\text{heiz}$ = 2.0 A & $I_\text{heiz}$ = 1.9 A & $I_\text{heiz}$ = 1.8 A \\
+      \midrule
+      U / V & $I_1$ / mA & $I_2$ / mA & $I_3$ / mA & $I_4$ / mA & $I_5$ / mA \\
+      \midrule
+      0	  & 0.000 & 0.000 & 0.000	& 0.000	& 0.000 \\
+      1	  &       &       & 0.000	& 0.000	& 0.000 \\
+      2	  &       &       & 0.000	& 0.000	& 0.000 \\
+      3	  &       &       & 0.001	& 0.000	& 0.000 \\
+      4	  &       &       & 0.002	& 0.001	& 0.000 \\
+      5	  & 0.015 & 0.017 & 0.006	& 0.002	& 0.000 \\
+      6	  &       &       & 0.007	& 0.004	& 0.000 \\
+      7	  &       &       & 0.015	& 0.006	& 0.000 \\
+      8	  &       &       & 0.015	& 0.009	& 0.000 \\
+      9	  &       &       & 0.022	& 0.013	& 0.001 \\
+      10	& 0.035 & 0.037 & 0.033	& 0.018	& 0.004 \\
+      11	&       &       & 0.040	& 0.021	& 0.008 \\
+      12	&       &       & 0.046	& 0.025	& 0.011 \\
+      13	&       &       & 0.050	& 0.028	& 0.012 \\
+      14	&       &       & 0.060	& 0.030	& 0.015 \\
+      15	& 0.055 & 0.062 & 0.066	& 0.034	& 0.015 \\
+      16	&       &       & 0.074	& 0.037	& 0.017 \\
+      17	&       &       & 0.074	& 0.040	& 0.019 \\
+      18	&       &       & 0.086	& 0.043	& 0.019 \\
+      19	&       &       & 0.098	& 0.045	& 0.020 \\
+      20	& 0.083 & 0.087 & 0.102	& 0.046	& 0.021 \\
+      21	&       &       & 0.109	& 0.048	& 0.021 \\
+      22	&       &       & 0.113	& 0.051	& 0.022 \\
+      23	&       &       & 0.117	& 0.052	& 0.022 \\
+      24	&       &       & 0.123	& 0.053	& 0.022 \\
+      25	& 0.113 & 0.117 & 0.122	& 0.053	& 0.023 \\
+      26	&       &       & 0.130	& 0.054	& 0.023 \\
+      27	&       &       & 0.130	& 0.055	& 0.023 \\
+      28	&       &       & 0.133	& 0.056	& 0.023 \\
+      29	&       &       & 0.132	& 0.056	& 0.023 \\
+      30	& 0.148 & 0.150 & 0.134	& 0.056	& 0.023 \\
+      35	& 0.187 & 0.186 & 0.140	& 0.057	& 0.024 \\
+      40	& 0.219 & 0.223 & 0.144	& 0.058	& 0.024 \\
+      45	& 0.266 & 0.260 & 0.147	& 0.059	& 0.025 \\
+      50	& 0.315 & 0.302 & 0.148	& 0.060	& 0.025 \\
+      55	& 0.364 & 0.344 & 0.149	& 0.060	& 0.025 \\
+      60	& 0.430 & 0.382 & 0.150	& 0.061	& 0.025 \\
+      70	& 0.532 & 0.510 & 0.153	& 0.062	& 0.025 \\
+      80	& 0.635 & 0.612 & 0.154	& 0.062	& 0.025 \\
+      90	& 0.750 & 0.718 & 0.156	& 0.063	& 0.026 \\
+      100	& 0.875 & 0.821 & 0.156	& 0.063	& 0.026 \\
+      110	& 1.020 & 0.933 & 0.155	& 0.063	& 0.026 \\
+      120	& 1.184 & 1.053 & 0.157	& 0.064	& 0.026 \\
+      130	& 1.330 & 1.168 & 0.157	& 0.064	& 0.026 \\
+      140	& 1.470 & 1.296 & 0.158	& 0.064	& 0.027 \\
+      150	& 1.622 & 1.462 & 0.159	& 0.064	& 0.027 \\
+      170	& 1.929 & 1.660 & 0.160	& 0.065	& 0.027 \\
+      190	& 2.230 & 1.899 & 0.161	& 0.065	& 0.027 \\
+      210	& 2.550 & 2.060 & 0.163	& 0.065	& 0.027 \\
+      230	& 2.860 & 2.270 & 0.164	& 0.066	& 0.027 \\
+      250	& 3.070 & 2.480 & 0.165	& 0.066	& 0.028 \\
+      \bottomrule
+    \end{tabular}
+    \caption{Messdaten }
+    \label{tab:Messdaten1}
+  \end{table}
+
+\subsection{Kennlinienschar zu den Dioden und deren Sättigungsstrom}
+Die Messdaten aus Tabelle (\ref{tab:Messdaten1}) sind in den Abbildungen (\ref{fig:Kenn1}) und (\ref{fig:Kenn2}) aufgetragen.
+
+\begin{figure} %Kennlinienschar Diode 1
   \centering
-  \begin{tabular}{c||c|c|c|c|c}
+  \includegraphics[height=7cm]{build/Kenn1}
+  \caption{Kennlinienschar für die 1. Diode}
+  \label{fig:Kenn1}
+\end{figure}
+
+\begin{figure} %Kennlinienschar Diode 2
+  \centering
+  \includegraphics[height=7cm]{build/Kenn2}
+  \caption{Kennlinienschar für die 2. Diode}
+  \label{fig:Kenn2}
+\end{figure}
+
+Wie in Abbilding (\ref{fig:Kenn1}) zu sehen ist kann kein Sättigungsstrom für die erste Diode abgelesen werden. Der Sättigungsstrom $I_\text{s}$ für die zweite Diode lässt sich, aus Abbildung (\ref{fig:Kenn2}), deutlich genauer abschätzen.
+\begin{align*}
+  \text{Schätzwert für}\ I_{\text{s},3} & \approx 0.175 \ \text{mA} \\
+  \text{Schätzwert für}\ I_{\text{s},4} & \approx 0.075 \ \text{mA} \\
+  \text{Schätzwert für}\ I_{\text{s},5} & \approx 0.035 \ \text{mA}
+\end{align*}
+
+\subsection{Gültigkeitsbereich des Langmuir-Schottkyschen Raumladungsgesetzes}
+Die Kennlinien $I_1$ und $I_2$ liegen komplett in dem Raumladungsbereich und der Exponent des Raumladungsgesetzes (\ref{eqn:jLS}) wird durch eine Regression zu
+\begin{align*}
+  \text{Exponent von}\ I_1 & =  \num{1.379 +- 0.001} \ , \\
+  \text{Exponent von}\ I_2 & =  \num{1.345 +- 0.002}
+\end{align*}
+bestimmt.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[height=7cm]{build/Raum}
+  \caption{Raumladungsgebiet für die erste Diode}
+  \label{fig:}
+\end{figure}
+
+\subsection{Anlaufstromgebiet und Kathodentemperatur}
+Die aufgenommenen Messdaten und die korrigierten Spannungen sind in Tabelle (\ref{tab:Messdaten2}) aufgeführt. Dieser Versuchsteil ist nur für die erste Diode durchgeführt worden. Da die Spannungen im nA Bereich liegen und das Ampermeter einen Innenwiderstand von 1 M$\Omega$ besitzt müssen die Spannungen mit
+\begin{align*}
+  U_\text{korr} = U - R_\text{innen} \cdot I
+\end{align*}
+korrigiert werden.
+
+\begin{table}[H] %Messdaten
+  \centering
+  \begin{tabular}{c | c | c}
     \toprule
-    Beschleunigungs- & \multicolumn{2}{c|}{Diode 1} & \multicolumn{3}{c}{Diode 2} \\
-    spannung & $I_\text{heiz}$ = 2.5 A & $I_\text{heiz}$ = 2.4 A & $I_\text{heiz}$ = 2.0 A & $I_\text{heiz}$ = 1.9 A & $I_\text{heiz}$ = 1.8 A \\
+    U / V & I / nA & $U_\text{korr}$ / V \\
     \midrule
-    U / V & $I_1$ / mA & $I_2$ / mA & $I_3$ / mA & $I_4$ / mA & $I_5$ / mA \\
-    \midrule
-    0	  & 0.000 & 0.000 & 0.000	& 0.000	& 0.000 \\
-    1	  &       &       & 0.000	& 0.000	& 0.000 \\
-    2	  &       &       & 0.000	& 0.000	& 0.000 \\
-    3	  &       &       & 0.001	& 0.000	& 0.000 \\
-    4	  &       &       & 0.002	& 0.001	& 0.000 \\
-    5	  & 0.015 & 0.017 & 0.006	& 0.002	& 0.000 \\
-    6	  &       &       & 0.007	& 0.004	& 0.000 \\
-    7	  &       &       & 0.015	& 0.006	& 0.000 \\
-    8	  &       &       & 0.015	& 0.009	& 0.000 \\
-    9	  &       &       & 0.022	& 0.013	& 0.001 \\
-    10	& 0.035 & 0.037 & 0.033	& 0.018	& 0.004 \\
-    11	&       &       & 0.040	& 0.021	& 0.008 \\
-    12	&       &       & 0.046	& 0.025	& 0.011 \\
-    13	&       &       & 0.050	& 0.028	& 0.012 \\
-    14	&       &       & 0.060	& 0.030	& 0.015 \\
-    15	& 0.055 & 0.062 & 0.066	& 0.034	& 0.015 \\
-    16	&       &       & 0.074	& 0.037	& 0.017 \\
-    17	&       &       & 0.074	& 0.040	& 0.019 \\
-    18	&       &       & 0.086	& 0.043	& 0.019 \\
-    19	&       &       & 0.098	& 0.045	& 0.020 \\
-    20	& 0.083 & 0.087 & 0.102	& 0.046	& 0.021 \\
-    21	&       &       & 0.109	& 0.048	& 0.021 \\
-    22	&       &       & 0.113	& 0.051	& 0.022 \\
-    23	&       &       & 0.117	& 0.052	& 0.022 \\
-    24	&       &       & 0.123	& 0.053	& 0.022 \\
-    25	& 0.113 & 0.117 & 0.122	& 0.053	& 0.023 \\
-    26	&       &       & 0.130	& 0.054	& 0.023 \\
-    27	&       &       & 0.130	& 0.055	& 0.023 \\
-    28	&       &       & 0.133	& 0.056	& 0.023 \\
-    29	&       &       & 0.132	& 0.056	& 0.023 \\
-    30	& 0.148 & 0.150 & 0.134	& 0.056	& 0.023 \\
-    35	& 0.187 & 0.186 & 0.140	& 0.057	& 0.024 \\
-    40	& 0.219 & 0.223 & 0.144	& 0.058	& 0.024 \\
-    45	& 0.266 & 0.260 & 0.147	& 0.059	& 0.025 \\
-    50	& 0.315 & 0.302 & 0.148	& 0.060	& 0.025 \\
-    55	& 0.364 & 0.344 & 0.149	& 0.060	& 0.025 \\
-    60	& 0.430 & 0.382 & 0.150	& 0.061	& 0.025 \\
-    70	& 0.532 & 0.510 & 0.153	& 0.062	& 0.025 \\
-    80	& 0.635 & 0.612 & 0.154	& 0.062	& 0.025 \\
-    90	& 0.750 & 0.718 & 0.156	& 0.063	& 0.026 \\
-    100	& 0.875 & 0.821 & 0.156	& 0.063	& 0.026 \\
-    110	& 1.020 & 0.933 & 0.155	& 0.063	& 0.026 \\
-    120	& 1.184 & 1.053 & 0.157	& 0.064	& 0.026 \\
-    130	& 1.330 & 1.168 & 0.157	& 0.064	& 0.026 \\
-    140	& 1.470 & 1.296 & 0.158	& 0.064	& 0.027 \\
-    150	& 1.622 & 1.462 & 0.159	& 0.064	& 0.027 \\
-    170	& 1.929 & 1.660 & 0.160	& 0.065	& 0.027 \\
-    190	& 2.230 & 1.899 & 0.161	& 0.065	& 0.027 \\
-    210	& 2.550 & 2.060 & 0.163	& 0.065	& 0.027 \\
-    230	& 2.860 & 2.270 & 0.164	& 0.066	& 0.027 \\
-    250	& 3.070 & 2.480 & 0.165	& 0.066	& 0.028 \\
+    0.00 & 9.00 &-0.009 \\
+    0.05 & 6.70 & 0.043 \\
+    0.10 & 6.00 & 0.094 \\
+    0.15 & 5.30 & 0.145 \\
+    0.20 & 4.00 & 0.196 \\
+    0.25 & 3.10 & 0.247 \\
+    0.30 & 2.30 & 0.298 \\
+    0.35 & 1.80 & 0.348 \\
+    0.40 & 1.30 & 0.399 \\
+    0.45 & 1.10 & 0.449 \\
+    0.50 & 0.96 & 0.499 \\
+    0.55 & 0.75 & 0.549 \\
+    0.60 & 0.59 & 0.599 \\
+    0.65 & 0.45 & 0.650 \\
+    0.70 & 0.36 & 0.700 \\
+    0.75 & 0.28 & 0.750 \\
+    0.80 & 0.22 & 0.800 \\
+    0.85 & 0.17 & 0.850 \\
+    0.90 & 0.14 & 0.900 \\
+    0.95 & 0.10 & 0.950 \\
+    1.00 & 0.09 & 1.000 \\
     \bottomrule
   \end{tabular}
-  \caption{}
+  \caption{Messwerte zum Anlaufstromgebiet}
+  \label{tab:Messdaten2}
+\end{table}
+
+Nun wird mit Hilfe von der Gleichung (\ref{eqn:jv}) eine Ausgleichsrechnung durchgeführt, um die Kathodentemperatur $T$ zu bestimmen. Für die Temperatur ergibt sich folgender Wert:
+\begin{align*}
+  T = (\num{2702.2 +- 80.7}) \ \text{K}
+\end{align*}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[height=7cm]{build/Anlauf}
+  \caption{Anlaufstromgebiet für die erste Diode}
+  \label{fig:anlauf}
+\end{figure}
+
+\subsection{Kathodentemperatur aus der Leistungsbilanz des Heiztromfadens}
+\label{sec:K}
+Mit dem Heizstrom $I_\text{heiz}$ und der Heizspannung $U_\text{heiz}$ aus Tabelle (\ref{tab:heiz}) und der Gleichung (\ref{eqn:T}) lässt sich die Kathodentemperatur berechnen.
+\begin{equation}
+  T = \left(\frac{I_\text{heiz} U_\text{heiz} - N_\text{WL}}{f \eta \sigma}\right)^{\frac{1}{4}}
+  \label{eqn:T}
+\end{equation}
+Wobei $N_\text{WL}$ zu 0.95 W geschätzt wird, $f$ die Kathodenoberfläche ist, $\eta = 0.28$ dem Emissionsgrad der Oberfläche und $\sigma = 5.7 \cdot 10^{-12}$ der Stefan-Boltzmannschen Strahlungskonstanten entspricht.
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{c c c}
+    \toprule
+    $I_\text{heiz}$ / A & $U_\text{heiz}$ / V & T / K \\
+    \midrule
+    2.5 & 6.2 & 2310.3 \\
+    2.4 & 6.0 & 2265.3 \\
+    2.0 & 5.0 & 2051.7 \\
+    1.9 & 4.3 & 1951.7 \\
+    1.8 & 4.0 & 1870.4 \\
+    \bottomrule
+  \end{tabular}
+  \caption{Kathodentemperatur}
+  \label{tab:heiz}
+\end{table}
+
+\subsection{Austrittsarbeit für Wolfram}
+Die Richardson-Gleichung (\ref{eqn:js}) lässt wie folgt umstellen:
+\begin{equation}
+  \Phi = - \frac{k T}{e_0} \ln \left(\frac{I_\text{s} h^3}{4 \pi f e_0 m_0 k^2 T^2}\right)
+\end{equation}
+Daraus lässt sich mit den Kathodentemperaturen aus Kapitel (\ref{sec:K}) und dem Sättigungsstrom $I_\text{s}$ die Austrittsarbeit von Wolfram bestimmen. In der folgenden Tabelle ist die Austrittsarbeit aufgelistet.
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{c c c}
+    \toprule
+    T / K & $I_\text{s}$ / mA & $\Phi$ / eV \\
+    \midrule
+    2051.7 & 0.175 & 4.887 \\
+    1951.7 & 0.075 & 4.775 \\
+    1870.4 & 0.035 & 4.685 \\
+    \bottomrule
+  \end{tabular}
+  \caption{Die Austrittsarbeit von Wolfram}
   \label{tab:}
 \end{table}
+
+Der Mittelwert der Austrittsarbeit liegt bei ($\num{4.782 +- 0.007}$) eV .
