--- a/13-19.April/content/durchfuehrung.tex
+++ b/13-19.April/content/durchfuehrung.tex
@@ -4,7 +4,7 @@ Als erstes wird die Strecke $L$ zwischen Photoelektrode und Spalt, wie in Abbild
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/Aufbau.png}
-  \caption{Versuchsaufbau}
+  \caption{Versuchsaufbau \cite[6]{sample}}
   \label{fig:aufbau}
 \end{figure}
 Anschließend wird einmal der Dunkelstrom $I_\text{D}$ der Photodiode gemessen. Dann kann nach dem Einspannen des Spaltes in die dafür vorgesehene Messaperatur der Laser eingeschaltet werden und das Beugungsbild vermessen werden. Dazu wird zunächst das Hauptmaxima ermittelt und von diesem ausgehend zu beiden Seiten 25 Messwerte genommen. Dies geschieht indem die Fotodiode jeweils um 1mm auf der Schiene vom Hauptmaximum entfernt wird und der Fotostrom $I$ ausgemessen wird.
