--- a/13-19.April/content/theorie.tex
+++ b/13-19.April/content/theorie.tex
@@ -11,7 +11,7 @@ Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität 
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/doppelspalt.png}
-  \caption{Phasenbeziehung zwischen zwei Teilstrahlen}
+  \caption{Phasenbeziehung zwischen zwei Teilstrahlen \cite[3]{sample}}
   \label{fig:dop}
 \end{figure}
 Es wird eine ebene Welle mit der Feldstärke
